Fix Biography and Others Card Margin on mobile

--- a/style.css
+++ b/style.css
@@ -718,6 +718,9 @@ p {
   .skill-container {
     margin-left: 30px;
   }
+  .others-container {
+    margin-left: 30px;
+  }
 }
 
 @media only screen and (min-width: 800px) {
